--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -58,6 +58,10 @@
       color: #5C5C5C;
       font-weight: 500;
       font-size: 24px;
+      &:before {
+        content: "";
+        background-image: url("data:image/svg+xml,%3Csvg width='34' height='33' viewBox='0 0 34 33' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M25.0203 12.5217C25.0203 18.8818 19.846 24.0435 13.4559 24.0435C7.06593 24.0435 1.8916 18.8818 1.8916 12.5217C1.8916 6.16166 7.06593 1 13.4559 1C19.846 1 25.0203 6.16166 25.0203 12.5217Z' stroke='%23F4F4F4' stroke-width='2'/%3E%3Cpath d='M21.832 20.8672L33.0003 31.9976' stroke='%23F4F4F4' stroke-width='2'/%3E%3C/svg%3E%0A");
+      }
     }
 
     .help__center__content {
