--- a/packages/client/src/sass/supportPage/AccountPage-style.scss
+++ b/packages/client/src/sass/supportPage/AccountPage-style.scss
@@ -56,6 +56,24 @@
         font-size: 48px;
         color: $main-text;
     }
+
+    .breadcump {
+        display: flex;
+        flex-direction: row;
+        font-weight: 300;
+        color: #f4f4f4;
+        list-style: none;
+        li {
+            &:nth-child(n+2) {
+                &::before{
+                    content: "❯";
+                    font-size: 0.8rem;
+                    padding: 0 0.5rem;
+                }
+                font-weight: 500;
+            }
+        }
+    }
     p {
       font-size: 1.2em;
       font-weight: 50;
